Source/WebCore/css/Pair.h
@@ -34,6 +34,11 @@ namespace WebCore {
 // it (eliminating some extra -webkit- internal properties).
 class Pair : public RefCounted<Pair> {
 public:
+    enum class IdenticalValueEncoding {
+        DoNotCoalesce,
+        Coalesce
+    };
+
     static Ref<Pair> create()
     {
         return adoptRef(*new Pair);
@@ -41,6 +46,10 @@ public:
     static Ref<Pair> create(RefPtr<CSSPrimitiveValue>&& first, RefPtr<CSSPrimitiveValue>&& second)
     {
         return adoptRef(*new Pair(WTF::move(first), WTF::move(second)));
+    }
+    static Ref<Pair> create(RefPtr<CSSPrimitiveValue>&& first, RefPtr<CSSPrimitiveValue>&& second, IdenticalValueEncoding encoding)
+    {
+        return adoptRef(*new Pair(WTF::move(first), WTF::move(second), encoding));
     }
     virtual ~Pair() { }
 
@@ -52,8 +61,11 @@ public:
 
     String cssText() const
     {
-    
-        return generateCSSString(first()->cssText(), second()->cssText());
+        String first = this->first()->cssText();
+        String second = this->second()->cssText();
+        if (m_encoding == IdenticalValueEncoding::Coalesce && first == second)
+            return first;
+        return first + ' ' + second;
     }
 
     bool equals(const Pair& other) const { return compareCSSValuePtr(m_first, other.m_first) && compareCSSValuePtr(m_second, other.m_second); }
@@ -61,16 +73,11 @@ public:
 private:
     Pair() : m_first(nullptr), m_second(nullptr) { }
     Pair(RefPtr<CSSPrimitiveValue>&& first, RefPtr<CSSPrimitiveValue>&& second) : m_first(WTF::move(first)), m_second(WTF::move(second)) { }
-
-    static String generateCSSString(const String& first, const String& second)
-    {
-        if (first == second)
-            return first;
-        return first + ' ' + second;
-    }
+    Pair(RefPtr<CSSPrimitiveValue>&& first, RefPtr<CSSPrimitiveValue>&& second, IdenticalValueEncoding encoding) : m_first(WTF::move(first)), m_second(WTF::move(second)), m_encoding(encoding) { }
 
     RefPtr<CSSPrimitiveValue> m_first;
     RefPtr<CSSPrimitiveValue> m_second;
+    IdenticalValueEncoding m_encoding { IdenticalValueEncoding::Coalesce };
 };
 
 } // namespace
